Update HTML files

--- a/blog.html
+++ b/blog.html
@@ -9,58 +9,57 @@ layout: default
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Top AI Blog Posts of the Week</title>
+<title>Top AI Blog Posts of the Week</title>
 </head>
 <body>
-  <h1>Top AI Blog Posts of the Week</h1>
-  
-  <h2>Title: Nvidia unveils AI chatbot ‘Chat with RTX’ for local PCs</h2>
-  <h3>Source: ReadWrite</h3>
-  <h4>Summary:</h4>
-  <ul>
-    <li>Nvidia has released an early version of a chatbot called Chat with RTX, allowing users to personalize a chatbot with their own content on Windows PCs.</li>
-    <li>The chatbot utilizes custom generative AI and requires an RTX 30 or 40-series GPU with at least 8GB of VRAM.</li>
-    <li>Users can upload their own documents to create summaries and receive relevant answers based on their personal data.</li>
-    <li>Chat with RTX can search YouTube URLs and transcripts for specific mentions or summarize entire videos.</li>
-    <li>The chatbot can process sensitive data locally on a PC without the need to share it with a third party or have an internet connection.</li>
-  </ul>
-  <a href="https://readwrite.com/nvidia-unveils-ai-chatbot-chat-with-rtx-for-local-pcs/">Read more</a>
-  
-  <h2>Title: Sora AI: ‘everyone will be filmmakers’, internet reacts to OpenAI’s new video generator</h2>
-  <h3>Source: ReadWrite</h3>
-  <h4>Summary:</h4>
-  <ul>
-    <li>OpenAI has announced Sora, a new text-to-video AI that can create realistic and imaginative scenes from text instructions.</li>
-    <li>Reactions to Sora have been varied, with some users enthusiastic and others wary.</li>
-    <li>Sora has been praised for its ability to generate longer scenes compared to other video generation tools.</li>
-    <li>Sora has limitations, including missing out on cause-and-effect details and finer spatial details.</li>
-    <li>Sora is currently in a testing phase and it is unclear if it will be free to use when it launches, but OpenAI is working on safety measures to prevent misuse.</li>
-  </ul>
-  <a href="https://readwrite.com/openai-unveils-sora-its-first-text-to-video-model/">Read more</a>
-  
-  <h2>Title: Show me the prompt</h2>
-  <h3>Source: Hamel.dev</h3>
-  <h4>Summary:</h4>
-  <ul>
-    <li>Many libraries aim to improve the output of LLMs by rewriting or constructing prompts, but they often discourage users from understanding and manipulating the prompts themselves.</li>
-    <li>Intercepting API calls can help engineers understand how these LLM frameworks work by examining the prompts sent to the language model.</li>
-    <li>Setting up a proxy like mitmproxy can log outgoing API requests and provide insight into the prompts and API calls made by LLM frameworks.</li>
-    <li>Examples from LLM libraries like Guardrails, Guidance, Langchain, Instructor, and DSPy demonstrate the value of intercepting API calls to gain a deeper understanding of how these frameworks function.</li>
-    <li>It is important to evaluate the necessity and effectiveness of LLM frameworks, consider alternative approaches, and make informed decisions by inspecting prompts and API calls.</li>
-  </ul>
-  <a href="https://hamel.dev/blog/posts/prompt/">Read more</a>
-  
-  <h2>Title: Most older iPhones, Macs, and iPads are vulnerable to a new GPU security flaw</h2>
-  <h3>Source: AppleInsider</h3>
-  <h4>Summary:</h4>
-  <ul>
-    <li>A new GPU security flaw named LeftoverLocals allows attackers to access data processed in a device's GPU.</li>
-    <li>Apple has patched the vulnerability in A17 iPhones and M3 Macs, but older models remain vulnerable.</li>
-    <li>The vulnerability is significant because GPUs are increasingly used in AI for processing Large Language Models (LLMs).</li>
-    <li>Users can protect themselves by not giving third-party access to their devices and installing the latest security updates from Apple.</li>
-    <li>It is unclear if Apple has plans to patch the vulnerability in impacted devices going forward.</li>
-  </ul>
-  <a href="https://appleinsider.com/articles/24/01/17/most-older-iphones-macs-and-ipads-are-vulnerable-to-a-new-gpu-security-flaw">Read more</a>
-  
+<h1>Top AI Blog Posts of the Week</h1>
+<h2>Title: Here's everything you need to know about Gemini 1.5, Google's newly updated AI model that hopes to challenge OpenAI</h2>
+<h3>Source: Business Insider</h3>
+<h3>Summary:</h3>
+<ul>
+<li>Google is developing a new large language model called Gemini 1.5 to challenge competitors like OpenAI.</li>
+<li>Gemini 1.5 is a next-gen AI model that can process various data types, including images, text, audio, video, and coding languages.</li>
+<li>The model uses a "mixture of experts" technique for faster and more efficient processing.</li>
+<li>Gemini 1.5 has a larger context window capacity, allowing it to analyze more data than its predecessor.</li>
+<li>In testing, Gemini 1.5 outperformed its predecessors in benchmark tests and demonstrated enhanced performance in generating responses and translating text. It also underwent extensive ethics and safety testing.</li>
+</ul>
+<a href="https://www.businessinsider.com/google-gemini-1-5-retools-ai-into-one-advanced-model-2024-2">Read more</a>
+
+<h2>Title: Nvidia unveils AI chatbot ‘Chat with RTX’ for local PCs</h2>
+<h3>Source: ReadWrite</h3>
+<h3>Summary:</h3>
+<ul>
+<li>Nvidia has released an early version of its Chat with RTX, a demo that allows users to personalize a chatbot with their own content on Windows PCs.</li>
+<li>Users can upload their own documents to create summaries and receive relevant answers based on their personal data.</li>
+<li>Chat with RTX can search YouTube URLs and transcripts for specific mentions or summarize entire videos.</li>
+<li>The tool supports various file formats, including .txt, .pdf, .doc/.docx, and .xml.</li>
+<li>Chat with RTX processes sensitive data on a local PC without the need to share it with a third party or have an internet connection.</li>
+</ul>
+<a href="https://readwrite.com/nvidia-unveils-ai-chatbot-chat-with-rtx-for-local-pcs/">Read more</a>
+
+<h2>Title: Sora AI: ‘everyone will be filmmakers’, internet reacts to OpenAI’s new video generator</h2>
+<h3>Source: ReadWrite</h3>
+<h3>Summary:</h3>
+<ul>
+<li>OpenAI has announced Sora, a new text-to-video AI that can create realistic and imaginative scenes from text instructions.</li>
+<li>Reactions to Sora have been mixed, with some users enthusiastic about its potential for amateur filmmakers.</li>
+<li>Sora has some limitations, including missing out on cause-and-effect details and finer spatial details.</li>
+<li>Currently, Sora is not available to the general public, and OpenAI has not stated whether it will be free to use.</li>
+<li>OpenAI is actively working on safety measures for Sora, including a detection tool to prevent misuse and engagement with policymakers.</li>
+</ul>
+<a href="https://readwrite.com/openai-unveils-sora-its-first-text-to-video-model/">Read more</a>
+
+<h2>Title: Google launches Gemma: new open source AI tool for developers</h2>
+<h3>Source: ReadWrite</h3>
+<h3>Summary:</h3>
+<ul>
+<li>Google has launched Gemma, a new open-source AI tool for developers and researchers. Gemma is part of a family of lightweight models designed for safe and innovative AI development.</li>
+<li>The Gemma models come in different sizes to address various computational constraints and developer requirements. Gemma 7B is a seven-billion-parameter model for efficient deployment on GPUs and TPUs, while Gemma 2B is a two-billion-parameter model for CPU and on-device applications.</li>
+<li>Google is introducing a responsible generative AI toolkit to provide guidance and tools for creating safer AI applications with Gemma. It also offers integration with popular frameworks like JAX, PyTorch, and TensorFlow.</li>
+<li>Gemma outperforms similar-sized open models on text-based tasks and demonstrates strong performance across academic benchmarks for language understanding, reasoning, and safety.</li>
+<li>Google is extending free access to Gemma for developers and researchers, including free credits and grants up to $500,000 for projects. Rigorous safety testing is recommended before widespread deployment.</li>
+</ul>
+<a href="https://readwrite.com/google-launches-gemma-new-open-source-ai-tool-for-developers/">Read more</a>
+
 </body>
 </html>
