--- a/news.html
+++ b/news.html
@@ -12,56 +12,54 @@ layout: default
 <title>Top AI News Stories of the Week</title>
 </head>
 <body>
-
-<h1>Article 1</h1>
-<h2>Title: S&P 500 companies are more obsessed than ever with AI</h2>
-<h3>Source: Business Insider</h3>
-<h4>Summary:</h4>
-<ul>
-<li>The percentage of S&amp;P 500 companies mentioning artificial intelligence (AI) on earnings calls reached a record high of 36% in the fourth quarter.</li>
-<li>Tech giants like Microsoft, Amazon, and IBM discussed AI, while companies outside the tech sector, such as Bank of New York Mellon and UnitedHealth Group, highlighted the potential for AI to enhance productivity and reduce costs.</li>
-<li>Energy companies saw the biggest increase in AI mentions, while real estate firms experienced a decline.</li>
-<li>A basket of AI tech stocks has outperformed the equal-weight S&amp;P 500 by 19 percentage points since the beginning of the year.</li>
-</ul>
-<a href="https://markets.businessinsider.com/news/stocks/ai-stocks-sp500-4q-tech-earnings-artificial-intelligence-goldman-sachs-2024-2">Read More</a>
-
-<h1>Article 2</h1>
-<h2>Title: AI use on dating apps rising, 1 in 4 Americans use to enhance profile</h2>
+<h1>Top AI News Stories of the Week</h1>
+<h2>Title: Elon Musk hints at possible X partnership with Midjourney</h2>
 <h3>Source: ReadWrite</h3>
 <h4>Summary:</h4>
 <ul>
-<li>A study by cybersecurity firm McAfee found that 23% of Americans are using AI to enhance their dating profiles and messaging, up from 15% last year.</li>
-<li>The use of AI tools in dating apps has led to an increase in romance scams, fake profiles, and inauthentic descriptions.</li>
-<li>AI-generated content has resulted in higher match rates, with 69% of respondents saying that AI-generated content earned them more interest than their original content.</li>
-<li>The rise of AI, particularly generative AI, is making it harder to distinguish real people from fake on dating apps, with 57% of respondents saying they wouldn't be able to reliably identify an AI-generated dating message.</li>
-<li>Nearly three out of five respondents reported coming across fake, AI-generated profiles in the past year, and almost a third said they had encountered scammers trying to steal money or personal information.</li>
+<li>Elon Musk has hinted at a possible partnership between X and AI image generator Midjourney.</li>
+<li>The partnership could transform the user experience on the social media platform and enable AI generation of content.</li>
+<li>AI-generated content is already prevalent on social media, but this partnership could blur the lines between human and machine creativity.</li>
+<li>This move aligns with Musk's vision of developing X as an app for everything and establishing it at the forefront of AI integration within social media.</li>
 </ul>
-<a href="https://readwrite.com/ai-use-on-dating-apps-rising-1-in-4-americans-use-it-to-get-more-matches/">Read More</a>
+<a href="https://readwrite.com/elon-musk-hints-at-possible-x-partnership-with-midjourney/">Link</a>
 
-<h1>Article 3</h1>
-<h2>Title: Google Gemini AI now in more countries for Android users</h2>
+<h2>Title: How to Use AI for Sales Automation</h2>
 <h3>Source: ReadWrite</h3>
 <h4>Summary:</h4>
 <ul>
-<li>Google has expanded the availability of its Gemini AI assistant and chatbot to more countries and languages.</li>
-<li>The Gemini assistant was initially available only in the United States and in English, but it has now been rolled out to Android users in Asia.</li>
-<li>The rollout to European countries may be delayed due to regulatory issues, but efforts are ongoing to address these issues.</li>
-<li>Gemini is powered by the large language model (LLM) of the same name and is expected to eventually replace Google Assistant.</li>
-<li>Gemini seamlessly integrates with various Google services, such as Gmail, Google Docs, Google Drive, and YouTube.</li>
+<li>Sales automation using AI can help sales representatives perform tasks automatically, freeing up time for relationship development and deal closing.</li>
+<li>AI can be used to identify potential deals by predicting client intentions and focusing on leads that are most likely to buy.</li>
+<li>AI can improve communication quality by mining customer data and creating accurate profiles, allowing for more focused and personalized communication.</li>
+<li>AI-powered tools like Mixmax and Lavender can optimize sales emails and provide instant feedback, enhancing customer interaction.</li>
+<li>AI can automate repetitive tasks, such as customer feedback analysis and data collection, allowing sales and marketing teams to work more efficiently.</li>
+<li>Chatbots with built-in AI can provide 24/7 customer support, saving time for sales departments and providing immediate assistance to customers.</li>
+<li>AI mailing platforms can streamline email marketing processes, automating lead capture and follow-up sequences.</li>
+<li>AI can transcribe and analyze calls, providing valuable insights and enhancing the quality of customer interactions.</li>
 </ul>
-<a href="https://readwrite.com/google-gemini-ai-now-in-more-countries-for-android-users/">Read More</a>
+<a href="https://readwrite.com/automate-sales-ai/">Link</a>
 
-<h1>Article 4</h1>
-<h2>Title: OpenAI CEO Sam Altman reveals AI danger which keeps him awake at night</h2>
+<h2>Title: Reddit reportedly signs $60million annual deal with AI company</h2>
 <h3>Source: ReadWrite</h3>
 <h4>Summary:</h4>
 <ul>
-<li>OpenAI CEO Sam Altman expressed concerns about the dangers of AI and the need to mitigate them.</li>
-<li>He called for a universal regulator, similar to the International Atomic Energy Agency, to oversee the AI industry and safeguard against societal misalignments.</li>
-<li>Altman emphasized the importance of moving from discussions and debates to an action plan with global buy-in in the next few years.</li>
-<li>OpenAI has previously announced plans for an AI ethics council, aligning with Altman's consistent approach to addressing societal apprehensions about advanced AI.</li>
+<li>Reddit has reportedly signed a $60 million annual deal with an unnamed AI company ahead of its initial public offering (IPO).</li>
+<li>The deal allows the AI company access to Reddit's material and content for the development of AI models.</li>
+<li>This move could be seen as a way for Reddit to attract more investors and expand its platform.</li>
+<li>Content licensing and partnerships with registered businesses are becoming increasingly important for AI companies to ensure the validity of their source materials and outputs.</li>
 </ul>
-<a href="https://readwrite.com/openai-ceo-sam-altman-reveals-ai-danger-which-keeps-him-awake-at-night/">Read More</a>
+<a href="https://readwrite.com/reddit-reportedly-signs-60million-annual-deal-with-ai-company/">Link</a>
+
+<h2>Title: Google introduces advanced AI capabilities to advertisers through Gemini integration</h2>
+<h3>Source: ReadWrite</h3>
+<h4>Summary:</h4>
+<ul>
+<li>Google plans to enhance its advertising products by integrating its Gemini artificial intelligence models, aiming to offer advanced AI capabilities to a broader range of customers.</li>
+<li>The integration of Gemini into Google's Performance Max product will allow advertisers to create more engaging ads with extended headlines of up to 90 characters.</li>
+<li>Google's AI model, Imagen 2, will enhance the image generation tool, enabling brands to create images featuring people for their ads.</li>
+<li>Safety measures have been implemented to prevent the misuse of generative AI, including restrictions on generating images of known individuals or content depicting violence, and watermarked synthetic images for transparency.</li>
+</ul>
+<a href="https://readwrite.com/google-introduces-advanced-ai-capabilities-to-advertisers-through-gemini-integration/">Link</a>
 
 </body>
 </html>
