--- a/top_articles.html
+++ b/top_articles.html
@@ -13,81 +13,60 @@ layout: default
 </head>
 <body>
 <h1>Top Research Articles of the Week</h1>
-<h2>Title: Why and When LLM-Based Assistants Can Go Wrong: Investigating the Effectiveness of Prompt-Based Interactions for Software Help-Seeking</h2>
+<h2>Title: Leveraging Large Language Models for Concept Graph Recovery and Question Answering in NLP Education</h2>
 <h3>Summary:</h3>
 <ul>
-<li>Large Language Model (LLM) assistants, such as ChatGPT, have the potential to assist users in navigating complex software.</li>
-<li>Prompt-based interactions can enhance the accuracy and relevance of LLM assistance.</li>
-<li>Users often struggle to understand the relationship between the prompt and the LLM's responses, leading to difficulties in applying the LLM's advice for software tasks.</li>
-<li>Users tend to trust LLM assistance without critically evaluating its accuracy, indicating a gap between their lack of software expertise and their ability to evaluate the LLM's assistance.</li>
-<li>Designing context-aware cues and incorporating explainable features into LLMs can help users understand prompt-based interactions and maximize the utility of LLM assistants.</li>
+<li>This study investigates the use of Large Language Models (LLMs) in educational scenarios, specifically for concept graph recovery and question-answering (QA) tasks in the field of Natural Language Processing (NLP).</li>
+<li>The researchers found that LLMs' ability to recover concept graphs, even in a zero-shot setting, is competitive with supervised methods and can improve QA performance by up to 26%.</li>
+<li>They also proposed a new benchmark, TutorQA, consisting of expert-verified QA tasks that require reasoning with the concept graph.</li>
+<li>The CGLLM pipeline, which integrates concept graphs with LLMs, was developed to enhance the interaction between the LLMs and the concept graph for improved QA performance.</li>
+<li>The study highlights the importance of incorporating knowledge systems, such as concept graphs, to provide more fine-grained and accurate answers in educational applications of LLMs.</li>
 </ul>
-<a href="http://arxiv.org/pdf/2402.08030v1">Link</a>
-
-<h2>Title: Refined Direct Preference Optimization with Synthetic Data for Behavioral Alignment of LLMs</h2>
+<h2>Title: Polarization of Autonomous Generative AI Agents Under Echo Chambers</h2>
 <h3>Summary:</h3>
 <ul>
-<li>The paper introduces refined Direct Preference Optimization (rDPO), a method for improving the behavioral alignment of Large Language Models (LLMs) without the need for human-annotated data.</li>
-<li>The method involves creating synthetic data using self-critique prompting by a teacher LLM and then utilizing a generalized DPO loss function to distill to a student LLM.</li>
-<li>rDPO is shown to be effective in a diverse set of behavioral alignment tasks, such as improved safety, robustness against role-playing, and reduced sycophancy.</li>
-<li>The experiments demonstrate that rDPO outperforms alternative methods across these tasks.</li>
+<li>This research investigates the potential for polarization among autonomous AI agents in echo chamber environments.</li>
+<li>The study found that AI agents based on generative language models tend to become polarized in echo chamber environments.</li>
+<li>The analysis showed that this polarization is caused by the agents' ability to update their opinions by considering their own and surrounding agents' opinions.</li>
+<li>Factors such as the agent's persona, number of discussing agents, initial opinion distribution, and the existence of reasons significantly influence polarization.</li>
+<li>The findings suggest the need to monitor these factors to prevent the polarization of AI agents and the potential negative consequences.</li>
 </ul>
-<a href="http://arxiv.org/pdf/2402.08005v1">Link</a>
-
-<h2>Title: Secret Collusion Among Generative AI Agents</h2>
+<h2>Title: Prompt Stealing Attacks Against Large Language Models</h2>
 <h3>Summary:</h3>
 <ul>
-<li>The paper introduces the problem of secret collusion among generative AI agents and the challenges it poses in terms of privacy and security.</li>
-<li>The authors propose a comprehensive model evaluation framework to assess the capabilities required for secret collusion, including steganography and coordination techniques.</li>
-<li>The empirical evaluations on baseline language models show that current models have limited steganographic capabilities, but there is a significant capability jump with GPT-4.</li>
-<li>The paper also discusses potential mitigation measures to prevent secret collusion, such as monitoring and penalization, setting direct incentives, and limiting capabilities.</li>
-<li>Further research is recommended to explore fundamental limitations to model capabilities and to evaluate models under real-world conditions.</li>
+<li>The defender's goal is to maximize the similarity between the generated answer and the original prompts.</li>
+<li>The defender has access to the original prompts and the answer generator, which allows them to analyze potential vulnerabilities and leakage of information.</li>
+<li>The prompt-based defense strategy aims to perturb the original prompts by adding additional prompts, making it difficult for the adversary to reverse engineer the original prompts.</li>
+<li>The answer-based defense strategy aims to perturb the generated answer to prevent the adversary from extracting the original prompts.</li>
+<li>The prompt-based defense is evaluated by adding random prompts and semantically related prompts, showing that semantically related prompts effectively mitigate prompt stealing attacks.</li>
+<li>The answer-based defense is evaluated by modifying the answer with random words and replacing key words, showing that modifying the answer with random words does not effectively mitigate prompt stealing attacks.</li>
 </ul>
-<a href="http://arxiv.org/pdf/2402.07510v1">Link</a>
-
-<h2>Title: PRompt Optimization in Multi-Step Tasks (PROMST): Integrating Human Feedback and Preference Alignment</h2>
+<h2>Title: The Effectiveness of Graph Contrastive Learning on Mathematical Information Retrieval</h2>
 <h3>Summary:</h3>
 <ul>
-<li>The paper introduces PROMST, a framework for automatic prompt optimization in multi-step tasks.</li>
-<li>PROMST incorporates human feedback and a learned score prediction model to generate optimal prompts for large language models (LLMs).</li>
-<li>PROMST outperforms existing methods on eight representative multi-step tasks, achieving an average improvement of 27.7% to 28.2% on GPT-3.5 and GPT-4, respectively.</li>
-<li>The integration of human feedback and the score model improves the prompt search process and aligns with individual preferences.</li>
-<li>The length of prompts correlates with higher scores, and modifying the score function can better align prompts with user preferences.</li>
+<li>This paper explores the use of Graph Contrastive Learning (GCL) for mathematical information retrieval (MIR) to retrieve documents containing mathematical formulas.</li>
+<li>The results show that GCL consistently outperforms the current leading formula retrieval model, TangentCFT, in terms of retrieval performance.</li>
+<li>GCL effectively captures the notation structure of mathematical formulas, which is crucial for MIR.</li>
+<li>The study focuses exclusively on models that rely solely on mathematical formulas for MIR, excluding models that incorporate contextual texts.</li>
+<li>The paper provides the source code for the GCL formula retrieval model to support ongoing research and development in the field.</li>
 </ul>
-<a href="http://arxiv.org/pdf/2402.08702v1">Link</a>
-
-<h2>Title: Grounding Language Model with Chunking-Free In-Context Retrieval</h2>
+<h2>Title: Rethinking Scientific Summarization Evaluation: Grounding Explainable Metrics on Facet-aware Benchmark</h2>
 <h3>Summary:</h3>
 <ul>
-<li>The paper presents CFIC, a chunking-free in-context retrieval approach for Retrieval-Augmented Generation (RAG) systems.</li>
-<li>CFIC utilizes encoded hidden states of documents for in-context retrieval, eliminating the need for document chunking.</li>
-<li>It incorporates Constrained Sentence Prefix Decoding and Skip Decoding strategies to enhance retrieval efficiency and fidelity of generated grounding text evidence.</li>
-<li>CFIC outperforms traditional methods in retrieving relevant and accurate evidence and offers a more streamlined and efficient retrieval solution.</li>
-<li>CFIC is particularly effective in identifying precise grounding text evidence, making it valuable for RAG systems.</li>
+<li>The traditional evaluation methods for scientific summarization, such as n-gram overlap and QA, are inadequate in providing explanations and identifying key content.</li>
+<li>The Facet-aware Metric (FM), which utilizes large language models (LLMs), offers a more comprehensive evaluation of scientific summaries by decomposing the evaluation task into simpler subtasks.</li>
+<li>Finetuned smaller models can rival LLMs in scientific contexts, while LLMs have limitations in learning from in-context information in scientific domains.</li>
+<li>Existing evaluation metrics show moderate correlation with human scores and high inter-correlation with ROUGE scores, emphasizing n-gram overlap.</li>
+<li>Decomposition is beneficial for both evaluating and understanding scientific abstracts.</li>
 </ul>
-<a href="http://arxiv.org/pdf/2402.09760v1">Link</a>
-
-<h2>Title: Grounding Data Science Code Generation with Input-Output Specifications</h2>
+<h2>Title: Tool-Augmented LLMs as a Universal Interface for IDEs</h2>
 <h3>Summary:</h3>
 <ul>
-<li>The paper introduces GIFT4CODE, a framework for instruction fine-tuning of large language models (LLMs) in data science programming.</li>
-<li>GIFT4CODE leverages synthetic data produced by the LLM itself and uses execution-derived feedback as a key learning signal to align the model's outputs with user specifications.</li>
-<li>The method improves the LLM's ability to generate code that is executable and accurately aligned with user specifications, enhancing the quality of code generation for complex data science tasks.</li>
-<li>The authors evaluate GIFT4CODE on two challenging data science benchmarks, ARCADE and DS-1000, and demonstrate significant improvements in code generation performance.</li>
-<li>The methodology underlying GIFT4CODE is general and adaptable, making it applicable to different domains that require precise task descriptions.</li>
+<li>The paper discusses the concept of using Large Language Models (LLMs) as a universal interface for Integrated Development Environments (IDEs).</li>
+<li>LLMs can perform complex actions involving multiple IDE features, eliminating the need for users to search through options and actions.</li>
+<li>The paper presents a proof-of-concept tool that utilizes LLMs to call external tools and expedite task execution.</li>
+<li>LLMs can assist IDE users in repetitive tasks and rarely occurring tasks that require a combination of tools.</li>
+<li>IDE developers can focus on making new features accessible to LLMs, simplifying the default user interface and improving discoverability.</li>
 </ul>
-<a href="http://arxiv.org/pdf/2402.08073v1">Link</a>
-
-<h2>Title: A Human-Inspired Reading Agent with Gist Memory of Very Long Contexts</h2>
-<h3>Summary:</h3>
-<ul>
-<li>The paper proposes ReadAgent, an agent system that extends the effective context length of language models up to 20x by using a human-inspired approach.</li>
-<li>ReadAgent uses a prompting system to decide what content to store in memory episodes, compresses these episodes into shorter gist memories, and performs interactive look-ups in the original text when needed.</li>
-<li>ReadAgent outperforms baseline methods in long-document reading comprehension tasks and improves the effective context length compared to using full text or retrieval methods.</li>
-<li>The results show that LLMs are capable of generating useful gist memories and reasoning over them to perform tasks in long contexts.</li>
-<li>ReadAgent can be adapted to different problem settings and shows promising performance in web navigation.</li>
-</ul>
-<a href="http://arxiv.org/pdf/2402.09727v1">Link</a>
-
 </body>
 </html>
